<resources>
    <string name="map_key" translatable="false">AIzaSyBXnIOFjv_9K1FQhBnRIGMxcN3e6lb7qbk</string>

    <string name="app_name">Drunken Auto Pilot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">Loading…</string>
    <string name="all_episodes" translatable="false">All Episodes</string>
    
<!--  Preference Strings  -->
    <string name="settings">Settings</string>

    <string name="general_title">General Settings</string>
    <string name="general_summary">Open general settings of the app</string>

    <string name="name_key" translatable="false">pref_name</string>
    <string name="name_title">Name</string>
    <string name="name_summary">Enter your name here</string>

    <string name="address_key">pref_address</string>
    <string name="address_title">Address</string>
    <string name="address_summary">Choose your home address</string>
    <string name="address_latitude_key" translatable="false">address_lat</string>
    <string name="address_longitude_key" translatable="false">address_long</string>
    <string name="address_name_key" translatable="false">address_name</string>

    <string name="about_title">About App</string>
    <string name="about_summary">App version</string>

    <string name="app_version_title">App Version</string>
    <string name="app_version_summary">Current version: 1.0</string>

    <string name="submit_address">Submit</string>

    <string name="view_episodes">View All Episodes</string>

<!--  Main Activity Strings -->
    <string name="start_episode_btn">Get Me Home!</string>


<!-- Episode Screen -->
    <string name="start_audio">Tell Myself Something</string>
    <string name="distance_label">Distance till home</string>
    <string name="steps_total">Steps so far</string>
    <string name="language">en</string>
    <string name="cancel">Cancel</string>
    <string name="yes_cancel">Yes cancel</string>
    <string name="no_go_home">No, get me home!</string>
    <string name="cancel_episode_title">Cancel Navigation?</string>
    <string name="cancel_episode_content">Are you sure you would like to cancel? All route information will be deleted</string>
    <string name="directions_api_failure">Could not reach directions API</string>
    <string name="marker_title">You are here</string>
    <string name="turn_on_locations">Please turn on location</string>
    <string name="no_step_counter">No Step Counter Sensor!</string>

<!-- Audio Recording -->
    <string name="stop_recording">Stop</string>
    <string name="cancel_recording">Cancel Audio Recording</string>
    <string name="recording_title">Recording…</string>
    <string name="recording_message">You are now recording audio</string>
    <string name="recording_saved">Recording saved</string>

<!-- Notifications -->
    <string name="notification_title">Welcome Home!</string>
    <string name="notification_content">Have a look at your journey</string>
    <string name="route_creation_failure">Failed to create new route</string>
    <string name="episode_creation_failure">Failed to create new episode</string>
    <string name="recording_cancelled">Recording cancelled</string>

<!-- All Episodes -->
    <string name="episode_date">Date Completed</string>
    <string name="episode_steps">Number of Steps</string>

<!-- Single Episode -->
    <string name="audio_recordings_title">Audio Recordings</string>
    <string name="distance_travelled_label">Total distance</string>
    <string name="steps_travelled_label">Total steps</string>
    <string name="cannot_find_episode">Episode not found</string>
    <string name="no_episodes">There are no episodes to display</string>
    <string name="could_not_find_episode">Could not find the requested episode</string>
    <string name="distance_display_template">%.2fkm</string>

</resources>
